--- a/public/act1/intro-to-nmap/index.html
+++ b/public/act1/intro-to-nmap/index.html
@@ -35,26 +35,26 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
     <meta itemprop="wordCount" content="554">
     <title>Intro to Nmap :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/intro-to-nmap/index.xml" rel="alternate" type="application/rss+xml" title="Intro to Nmap :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763828795" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763828795" defer></script>
-    <script src="/js/search-lunr.js?1763828795" defer></script>
-    <script src="/js/search.js?1763828795" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763889481" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763889481" defer></script>
+    <script src="/js/search-lunr.js?1763889481" defer></script>
+    <script src="/js/search.js?1763889481" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763828795";
+      window.relearn.index_js_url="/searchindex.en.js?1763889481";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763828795" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763889481" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763828795" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763828795" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763828795" rel="stylesheet">
-    <link href="/css/theme.css?1763828795" rel="stylesheet">
-    <link href="/css/format-html.css?1763828795" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763889481" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763889481" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763889481" rel="stylesheet">
+    <link href="/css/theme.css?1763889481" rel="stylesheet">
+    <link href="/css/format-html.css?1763889481" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -173,8 +173,8 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 
 <h1 id="intro-to-nmap">Intro to Nmap</h1>
 
-<p><a href="#R-image-8c38c1948164dc50f69504bae62822f9" class="lightbox-link"><img alt="Eric Pursley" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/ericpursley-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8c38c1948164dc50f69504bae62822f9"><img alt="Eric Pursley" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/ericpursley-avatar.gif"></a></p>
+<p><a href="#R-image-6ada792e69c4467d7e9a91c01e67864c" class="lightbox-link"><img alt="Eric Pursley" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/ericpursley-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6ada792e69c4467d7e9a91c01e67864c"><img alt="Eric Pursley" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/ericpursley-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Meet Eric in the hotel parking lot for Nmap know-how and scanning secrets. Help him connect to the wardriving rig on his motorcycle!</p>
@@ -192,8 +192,8 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 </blockquote>
 <h2 id="intro-top-nmap-terminal">Intro top Nmap terminal</h2>
 <p>This terminal starts with a simple welcome screen:</p>
-<p><a href="#R-image-8e4e8e54a2c1f552ca2c546c4a7ce3f4" class="lightbox-link"><img alt="Introduction screen" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8e4e8e54a2c1f552ca2c546c4a7ce3f4"><img alt="Introduction screen" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-1.png"></a></p>
+<p><a href="#R-image-880a54358e98c22c9a9b1d2e1cf1b9b9" class="lightbox-link"><img alt="Introduction screen" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-880a54358e98c22c9a9b1d2e1cf1b9b9"><img alt="Introduction screen" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-1.png"></a></p>
 <h3 id="task-1---scan-top-1000-ports">Task 1 - scan top 1000 ports</h3>
 <blockquote>
 <p>When run without any options, nmap performs a TCP port scan of the top 1000 ports. Run a default scan of <code>127.0.12.25</code> and see which port is open.</p>
@@ -201,11 +201,11 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 <p>For this we use just use the following command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>nmap 127.0.12.25</span></span></code></pre></div>
 <p><em>Task 1 screen</em>:
-<a href="#R-image-637f3399087defa7dc3f640aacf676c6" class="lightbox-link"><img alt="Scan top 1000 ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-637f3399087defa7dc3f640aacf676c6"><img alt="Scan top 1000 ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-2.png"></a></p>
+<a href="#R-image-8de425a049896b0a9ba30ee8aaf81c0b" class="lightbox-link"><img alt="Scan top 1000 ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8de425a049896b0a9ba30ee8aaf81c0b"><img alt="Scan top 1000 ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-2.png"></a></p>
 <p><em>Task 1 results</em>:
-<a href="#R-image-f1cfa1c4bdb5a82f2734735a1932c417" class="lightbox-link"><img alt="Result scan top 1000 ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f1cfa1c4bdb5a82f2734735a1932c417"><img alt="Result scan top 1000 ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-3.png"></a></p>
+<a href="#R-image-8560ba825bf347b7a5e765bacd6a8f5e" class="lightbox-link"><img alt="Result scan top 1000 ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8560ba825bf347b7a5e765bacd6a8f5e"><img alt="Result scan top 1000 ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-3.png"></a></p>
 <p>The scan revealed that port <code>TCP/8080</code> is open.</p>
 <h3 id="task-2---scan-all-ports">Task 2 - Scan all ports</h3>
 <blockquote>
@@ -214,8 +214,8 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 <p>If we use the ports switch for namep, <code>-p</code>, and add a <code>-</code>, we instruct Nmap to scan all ports. The command will then be:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>nmap -p- 127.0.12.25</span></span></code></pre></div>
 <p><em>Scan results:</em>
-<a href="#R-image-101685cae12e1d9014a2bc3480863dbc" class="lightbox-link"><img alt="Scan all ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-101685cae12e1d9014a2bc3480863dbc"><img alt="Scan all ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-4.png"></a></p>
+<a href="#R-image-461ca09702a75ce2a9dedc811b8968d6" class="lightbox-link"><img alt="Scan all ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-461ca09702a75ce2a9dedc811b8968d6"><img alt="Scan all ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-4.png"></a></p>
 <h3 id="task-3---scan-a-range">Task 3 - Scan a range</h3>
 <blockquote>
 <p>Nmap can also scan a range of IP addresses- Scan the range 127.0.12.20 - 127.0.12.28 and see which has a port open.</p>
@@ -223,8 +223,8 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 <p>To scan a range we can define a range like so, using the scan all ports option in addition:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>nmap -p- 127.0.12-20-28</span></span></code></pre></div>
 <p><em>Scan results:</em>
-<a href="#R-image-cd8a7eb6d81afe171c34a498977fae88" class="lightbox-link"><img alt="Scan a range " class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-5.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cd8a7eb6d81afe171c34a498977fae88"><img alt="Scan a range " class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-5.png"></a></p>
+<a href="#R-image-52a1db69d98cca174ddba239552aaaad" class="lightbox-link"><img alt="Scan a range " class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-5.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-52a1db69d98cca174ddba239552aaaad"><img alt="Scan a range " class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-5.png"></a></p>
 <h3 id="task-4---version-scanning">Task 4 - Version scanning</h3>
 <blockquote>
 <p>Namp has a version detection engine, to help determine waht services are running on a given port. What services is running on 127.0.12.25?</p>
@@ -232,16 +232,16 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 <p>The service version scan option is called <code>-sV</code>, we can use it like so:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>nmap -p <span style="color:#ae81ff">8080</span> -sV 127.0.12.25</span></span></code></pre></div>
 <p><em>Results version scanning:</em>
-<a href="#R-image-932484aacf4efea74457204286f2eaca" class="lightbox-link"><img alt="Version scanning" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-932484aacf4efea74457204286f2eaca"><img alt="Version scanning" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-6.png"></a></p>
+<a href="#R-image-ca8802197ae7085208754559e13af106" class="lightbox-link"><img alt="Version scanning" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ca8802197ae7085208754559e13af106"><img alt="Version scanning" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-6.png"></a></p>
 <h3 id="task-5---interacting-with-a-port">Task 5 - interacting with a port</h3>
 <blockquote>
 <p>Sometimes you want to interact with a port. which is a perfect job for Netcat! Use the ncat tool to connect to TCP port 240601 on 127.0.12.25 and view the banner returned</p>
 </blockquote>
 <p>Ncat is a common tool we often use in pentests and threat hunting. Its standard use follows this format <code>nc &lt;ip&gt; &lt;port&gt;</code>, it defaults to use <code>TCP</code>. We use the following command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>nc 127.0.12.25 <span style="color:#ae81ff">24601</span></span></span></code></pre></div>
-<p><a href="#R-image-5254a3633dc1ba64e58fc067c577d352" class="lightbox-link"><img alt="Interacting with a port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-7.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5254a3633dc1ba64e58fc067c577d352"><img alt="Interacting with a port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-7.png"></a></p>
+<p><a href="#R-image-3d8803134f8957c33259b232f55d604d" class="lightbox-link"><img alt="Interacting with a port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-7.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3d8803134f8957c33259b232f55d604d"><img alt="Interacting with a port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-7.png"></a></p>
 <h2 id="eric-pursley-mission-debrief">Eric Pursley mission debrief</h2>
 <blockquote>
 <p>Excellent work! You&rsquo;ve got the Nmap fundamentals down - that X-ray vision is going to serve you well in future challenges.</p>
@@ -297,6 +297,7 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
           <ul class="enlarge morespace collapsible-menu">
             <li class="parent " data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu">
             <li class="" data-nav-url="/act1/holiday-hack-orientation/index.html"><a class="padding" href="/act1/holiday-hack-orientation/index.html">Holiday Hack Orientation</a></li>
+            <li class="" data-nav-url="/act1/its-all-about-defang/index.html"><a class="padding" href="/act1/its-all-about-defang/index.html">Its All About Defang</a></li>
             <li class="" data-nav-url="/act1/neighborhood-watch-bypass/index.html"><a class="padding" href="/act1/neighborhood-watch-bypass/index.html">Neighborhood Watch Bypass</a></li>
             <li class="" data-nav-url="/act1/santas-gift-tracking-service-port-mystery/index.html"><a class="padding" href="/act1/santas-gift-tracking-service-port-mystery/index.html">Santa&#39;s Gift Tracking Service Port Mystery</a></li>
             <li class="" data-nav-url="/act1/visual-network-thinger/index.html"><a class="padding" href="/act1/visual-network-thinger/index.html">Visual Network Thinger</a></li>
@@ -323,8 +324,8 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763828795" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763828795" defer></script>
-    <script src="/js/theme.js?1763828795" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763889481" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763889481" defer></script>
+    <script src="/js/theme.js?1763889481" defer></script>
   </body>
 </html>
