--- a/public/act1/holiday-hack-orientation/index.html
+++ b/public/act1/holiday-hack-orientation/index.html
@@ -31,26 +31,26 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
     <meta itemprop="wordCount" content="240">
     <title>Holiday Hack Orientation :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/holiday-hack-orientation/index.xml" rel="alternate" type="application/rss+xml" title="Holiday Hack Orientation :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763828795" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763828795" defer></script>
-    <script src="/js/search-lunr.js?1763828795" defer></script>
-    <script src="/js/search.js?1763828795" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763889481" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763889481" defer></script>
+    <script src="/js/search-lunr.js?1763889481" defer></script>
+    <script src="/js/search.js?1763889481" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763828795";
+      window.relearn.index_js_url="/searchindex.en.js?1763889481";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763828795" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763889481" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763828795" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763828795" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763828795" rel="stylesheet">
-    <link href="/css/theme.css?1763828795" rel="stylesheet">
-    <link href="/css/format-html.css?1763828795" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763889481" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763889481" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763889481" rel="stylesheet">
+    <link href="/css/theme.css?1763889481" rel="stylesheet">
+    <link href="/css/format-html.css?1763889481" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -138,7 +138,7 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 <span class="btn cstyle link noborder notitle interactive"><a href="/act1/index.html" title="Act 1 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/act1/neighborhood-watch-bypass/index.html" title="Neighborhood Watch Bypass (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/act1/its-all-about-defang/index.html" title="Its All About Defang (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><button onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button></span>
@@ -161,8 +161,8 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 
 <h1 id="holiday-hack-orientation">Holiday Hack Orientation</h1>
 
-<p><a href="#R-image-ab0ad906a09ab7662ad77325537c56d5" class="lightbox-link"><img alt="Lynn Schifano" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/lynnschifano-portrait.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ab0ad906a09ab7662ad77325537c56d5"><img alt="Lynn Schifano" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/lynnschifano-portrait.png"></a></p>
+<p><a href="#R-image-a0ebe09e391eb5499f276d3d1bc9ee60" class="lightbox-link"><img alt="Lynn Schifano" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/lynnschifano-portrait.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a0ebe09e391eb5499f276d3d1bc9ee60"><img alt="Lynn Schifano" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/lynnschifano-portrait.png"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Meet Lynn Schifano on the train for a warm welcome and get ready for your journey around the Dosis Neighborhood.</p>
@@ -176,14 +176,14 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 <hr>
 <p>Hey, think you can give this terminal a try? Just click on it and follow the instructions.</p>
 </blockquote>
-<p><a href="#R-image-70a4da3511411be227dbba464c69d92c" class="lightbox-link"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-70a4da3511411be227dbba464c69d92c"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png"></a></p>
+<p><a href="#R-image-ec786a10ab31401e2ef428708ea4bbd8" class="lightbox-link"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ec786a10ab31401e2ef428708ea4bbd8"><img alt="Talking to Lynn Schifano on the train" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-1.png"></a></p>
 <p>On one of my attempt to grab a screenshot, no character showed up:</p>
-<p><a href="#R-image-f029fe2055be37c362224ad163f4aca9" class="lightbox-link"><img alt="Somehow, no one was there to witness" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f029fe2055be37c362224ad163f4aca9"><img alt="Somehow, no one was there to witness" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png"></a></p>
+<p><a href="#R-image-308977d7d26ba955b909ee18947d5c26" class="lightbox-link"><img alt="Somehow, no one was there to witness" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-308977d7d26ba955b909ee18947d5c26"><img alt="Somehow, no one was there to witness" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-2.png"></a></p>
 <h2 id="terminal-1">Terminal 1</h2>
-<p><a href="#R-image-2430c70b29a8f53ed5587b809750bfdf" class="lightbox-link"><img alt="Terminal 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2430c70b29a8f53ed5587b809750bfdf"><img alt="Terminal 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png"></a></p>
+<p><a href="#R-image-724ea3330d43c2796c5cf8259a7bccd8" class="lightbox-link"><img alt="Terminal 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-724ea3330d43c2796c5cf8259a7bccd8"><img alt="Terminal 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/holiday-hack-orientation-3.png"></a></p>
 <h2 id="lynn-schifano-mission-debrief">Lynn Schifano mission debrief</h2>
 <blockquote>
 <p>Great work! Please, hop off the train and explore the neighborhood.</p>
@@ -241,6 +241,7 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
           <ul class="enlarge morespace collapsible-menu">
             <li class="parent " data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu">
             <li class="active " data-nav-url="/act1/holiday-hack-orientation/index.html"><a class="padding" href="/act1/holiday-hack-orientation/index.html">Holiday Hack Orientation</a></li>
+            <li class="" data-nav-url="/act1/its-all-about-defang/index.html"><a class="padding" href="/act1/its-all-about-defang/index.html">Its All About Defang</a></li>
             <li class="" data-nav-url="/act1/neighborhood-watch-bypass/index.html"><a class="padding" href="/act1/neighborhood-watch-bypass/index.html">Neighborhood Watch Bypass</a></li>
             <li class="" data-nav-url="/act1/santas-gift-tracking-service-port-mystery/index.html"><a class="padding" href="/act1/santas-gift-tracking-service-port-mystery/index.html">Santa&#39;s Gift Tracking Service Port Mystery</a></li>
             <li class="" data-nav-url="/act1/visual-network-thinger/index.html"><a class="padding" href="/act1/visual-network-thinger/index.html">Visual Network Thinger</a></li>
@@ -267,8 +268,8 @@ Lynn Schifano mission statement Welcome to the 2025 SANS Holiday Hack Challenge!
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763828795" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763828795" defer></script>
-    <script src="/js/theme.js?1763828795" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763889481" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763889481" defer></script>
+    <script src="/js/theme.js?1763889481" defer></script>
   </body>
 </html>
