--- a/public/act1/santas-gift-tracking-service-port-mystery/index.html
+++ b/public/act1/santas-gift-tracking-service-port-mystery/index.html
@@ -39,26 +39,26 @@ Think you can check out this terminal for me? I need to use cURL to access the g
     <meta itemprop="wordCount" content="350">
     <title>Santa&#39;s Gift Tracking Service Port Mystery :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/santas-gift-tracking-service-port-mystery/index.xml" rel="alternate" type="application/rss+xml" title="Santa&#39;s Gift Tracking Service Port Mystery :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763828795" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763828795" defer></script>
-    <script src="/js/search-lunr.js?1763828795" defer></script>
-    <script src="/js/search.js?1763828795" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763889481" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763889481" defer></script>
+    <script src="/js/search-lunr.js?1763889481" defer></script>
+    <script src="/js/search.js?1763889481" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763828795";
+      window.relearn.index_js_url="/searchindex.en.js?1763889481";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763828795" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763889481" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763828795" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763828795" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763828795" rel="stylesheet">
-    <link href="/css/theme.css?1763828795" rel="stylesheet">
-    <link href="/css/format-html.css?1763828795" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763889481" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763889481" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763889481" rel="stylesheet">
+    <link href="/css/theme.css?1763889481" rel="stylesheet">
+    <link href="/css/format-html.css?1763889481" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -173,8 +173,8 @@ Think you can check out this terminal for me? I need to use cURL to access the g
 
 <h1 id="santas-gift-tracking-service-port-mystery">Santa&#39;s Gift Tracking Service Port Mystery</h1>
 
-<p><a href="#R-image-3c30bd06a4ed0ea2ebf86347577a0fd0" class="lightbox-link"><img alt="Yori Kvitchko" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/yori-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3c30bd06a4ed0ea2ebf86347577a0fd0"><img alt="Yori Kvitchko" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/yori-avatar.gif"></a></p>
+<p><a href="#R-image-e4b237209ce2671b9a51986d00176385" class="lightbox-link"><img alt="Yori Kvitchko" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/yori-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e4b237209ce2671b9a51986d00176385"><img alt="Yori Kvitchko" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/yori-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Chat with Yori near the apartment building about Santa&rsquo;s mysterious gift tracker and unravel the holiday mystery.</p>
@@ -187,8 +187,8 @@ Think you can check out this terminal for me? I need to use cURL to access the g
 <p>Please see what you can do!</p>
 </blockquote>
 <h2 id="terminal">Terminal</h2>
-<p><a href="#R-image-1831bdc56bf44074806e524d779e3b7e" class="lightbox-link"><img alt="Welcome screen" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-1831bdc56bf44074806e524d779e3b7e"><img alt="Welcome screen" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-1.png"></a></p>
+<p><a href="#R-image-7fb6d6894ad8994e3008d38d0bf78628" class="lightbox-link"><img alt="Welcome screen" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7fb6d6894ad8994e3008d38d0bf78628"><img alt="Welcome screen" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-1.png"></a></p>
 <p>By listing the home directory we find a <code>README.txt</code> file:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0"><code>Welcome!
 
@@ -208,13 +208,13 @@ Good luck!</code></pre></div>
 <h3 id="finding-listening-port">Finding listening port</h3>
 <p>The tracking application was originally configured to run on port 8080, but doesnt answer. Our objective now is to trace down which port it now listens to.</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>ss -tlnp</span></span></code></pre></div>
-<p><a href="#R-image-93b2fe131b86f03886fb5211cf062389" class="lightbox-link"><img alt="Finding listening port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-93b2fe131b86f03886fb5211cf062389"><img alt="Finding listening port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-2.png"></a></p>
+<p><a href="#R-image-20c384d83d80bb521287a6e3b51685a4" class="lightbox-link"><img alt="Finding listening port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-20c384d83d80bb521287a6e3b51685a4"><img alt="Finding listening port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-2.png"></a></p>
 <p>The listeneing port in question is <code>12321</code>, connecting to it:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>curl http://localhost:12321</span></span></code></pre></div>
 <p>As the original port was a well known web-port, we&rsquo;ll just go ahead connecting using Curl:</p>
-<p><a href="#R-image-17cfa62c9d92d5e7ee951b1be01e12c3" class="lightbox-link"><img alt="Connecting to port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-17cfa62c9d92d5e7ee951b1be01e12c3"><img alt="Connecting to port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-3.png"></a></p>
+<p><a href="#R-image-16825a18b5c9fb76994a6151cdf69d0e" class="lightbox-link"><img alt="Connecting to port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-16825a18b5c9fb76994a6151cdf69d0e"><img alt="Connecting to port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-3.png"></a></p>
 <p>The entire output is included below:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-json" data-lang="json"><span style="display:flex;"><span>{
 </span></span><span style="display:flex;"><span>  <span style="color:#f92672">&#34;status&#34;</span>: <span style="color:#e6db74">&#34;success&#34;</span>,
@@ -306,6 +306,7 @@ Good luck!</code></pre></div>
           <ul class="enlarge morespace collapsible-menu">
             <li class="parent " data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu">
             <li class="" data-nav-url="/act1/holiday-hack-orientation/index.html"><a class="padding" href="/act1/holiday-hack-orientation/index.html">Holiday Hack Orientation</a></li>
+            <li class="" data-nav-url="/act1/its-all-about-defang/index.html"><a class="padding" href="/act1/its-all-about-defang/index.html">Its All About Defang</a></li>
             <li class="" data-nav-url="/act1/neighborhood-watch-bypass/index.html"><a class="padding" href="/act1/neighborhood-watch-bypass/index.html">Neighborhood Watch Bypass</a></li>
             <li class="active " data-nav-url="/act1/santas-gift-tracking-service-port-mystery/index.html"><a class="padding" href="/act1/santas-gift-tracking-service-port-mystery/index.html">Santa&#39;s Gift Tracking Service Port Mystery</a></li>
             <li class="" data-nav-url="/act1/visual-network-thinger/index.html"><a class="padding" href="/act1/visual-network-thinger/index.html">Visual Network Thinger</a></li>
@@ -332,8 +333,8 @@ Good luck!</code></pre></div>
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763828795" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763828795" defer></script>
-    <script src="/js/theme.js?1763828795" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763889481" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763889481" defer></script>
+    <script src="/js/theme.js?1763889481" defer></script>
   </body>
 </html>
