--- a/public/act1/visual-network-thinger/index.html
+++ b/public/act1/visual-network-thinger/index.html
@@ -35,26 +35,26 @@ You know, I think Santa is right! It truly is better to give than to receive.">
     <meta itemprop="wordCount" content="185">
     <title>Visual Network Thinger :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/visual-network-thinger/index.xml" rel="alternate" type="application/rss+xml" title="Visual Network Thinger :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763828795" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763828795" defer></script>
-    <script src="/js/search-lunr.js?1763828795" defer></script>
-    <script src="/js/search.js?1763828795" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763889481" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763889481" defer></script>
+    <script src="/js/search-lunr.js?1763889481" defer></script>
+    <script src="/js/search.js?1763889481" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763828795";
+      window.relearn.index_js_url="/searchindex.en.js?1763889481";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763828795" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763828795" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763889481" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763828795" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763828795" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763828795" rel="stylesheet">
-    <link href="/css/theme.css?1763828795" rel="stylesheet">
-    <link href="/css/format-html.css?1763828795" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763889481" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763889481" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763889481" rel="stylesheet">
+    <link href="/css/theme.css?1763889481" rel="stylesheet">
+    <link href="/css/format-html.css?1763889481" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -165,8 +165,8 @@ You know, I think Santa is right! It truly is better to give than to receive.">
 
 <h1 id="visual-network-thinger">Visual Network Thinger</h1>
 
-<p><a href="#R-image-d8d25461ff5088d345f79183b83c107b" class="lightbox-link"><img alt="Jared Folkins" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/jaredfolkins-portrait.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d8d25461ff5088d345f79183b83c107b"><img alt="Jared Folkins" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/jaredfolkins-portrait.png"></a></p>
+<p><a href="#R-image-44e31ab3038c5b4be2e7a069cca1c25e" class="lightbox-link"><img alt="Jared Folkins" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/jaredfolkins-portrait.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-44e31ab3038c5b4be2e7a069cca1c25e"><img alt="Jared Folkins" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/jaredfolkins-portrait.png"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.</p>
@@ -181,8 +181,8 @@ You know, I think Santa is right! It truly is better to give than to receive.">
 <p>Want to dive into some hands-on network exploration?</p>
 </blockquote>
 <h2 id="solution">Solution</h2>
-<p><a href="#R-image-3bc69c12e99718879d34adc9a52d89fd" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3bc69c12e99718879d34adc9a52d89fd"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
+<p><a href="#R-image-36689cb4f4f042c6ebf43454bd33f5b2" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-36689cb4f4f042c6ebf43454bd33f5b2"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
 <h2 id="jared-folkins-mission-debrief">Jared Folkins mission debrief</h2>
 <blockquote>
 <p>Wonderful! You&rsquo;ve mastered those networking basics beautifully.</p>
@@ -238,6 +238,7 @@ You know, I think Santa is right! It truly is better to give than to receive.">
           <ul class="enlarge morespace collapsible-menu">
             <li class="parent " data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu">
             <li class="" data-nav-url="/act1/holiday-hack-orientation/index.html"><a class="padding" href="/act1/holiday-hack-orientation/index.html">Holiday Hack Orientation</a></li>
+            <li class="" data-nav-url="/act1/its-all-about-defang/index.html"><a class="padding" href="/act1/its-all-about-defang/index.html">Its All About Defang</a></li>
             <li class="" data-nav-url="/act1/neighborhood-watch-bypass/index.html"><a class="padding" href="/act1/neighborhood-watch-bypass/index.html">Neighborhood Watch Bypass</a></li>
             <li class="" data-nav-url="/act1/santas-gift-tracking-service-port-mystery/index.html"><a class="padding" href="/act1/santas-gift-tracking-service-port-mystery/index.html">Santa&#39;s Gift Tracking Service Port Mystery</a></li>
             <li class="active " data-nav-url="/act1/visual-network-thinger/index.html"><a class="padding" href="/act1/visual-network-thinger/index.html">Visual Network Thinger</a></li>
@@ -264,8 +265,8 @@ You know, I think Santa is right! It truly is better to give than to receive.">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763828795" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763828795" defer></script>
-    <script src="/js/theme.js?1763828795" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763889481" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763889481" defer></script>
+    <script src="/js/theme.js?1763889481" defer></script>
   </body>
 </html>
